Make sure footer does not wrap for no reason

--- a/albertyw.com/static/global.css
+++ b/albertyw.com/static/global.css
@@ -21,4 +21,5 @@ img {
     bottom: 0;
     padding-top: 50px;
     height: 150px;
+    width: 100%;
 }
